--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,14 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+ul.Photos li {
+  display: inline-block;
+  margin: 0 10px;
+}
+
+ul.Photos {
+  padding: 0;
+  list-style: none;
+  text-align: center;
+}
