--- a/src/Components/Photos/Photos.scss
+++ b/src/Components/Photos/Photos.scss
@@ -7,4 +7,25 @@ ul.Photos li {
     padding: 0;
     list-style: none;
     text-align: center;
+    display: flex;
+    flex-flow: wrap;
+    justify-content: space-around;
+    li {
+      p {
+        font-size: 12px;
+        max-width: 153px;
+      }
+    }
   }
+
+.PhotoImage {
+  border-radius: 2px;
+  -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.24), 0 0 2px 0 rgba(0, 0, 0, 0.12);
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.24), 0 0 2px 0 rgba(0, 0, 0, 0.12);
+  border-style: solid;
+  border-width: 1px;
+  border-image-source: linear-gradient(to bottom, #ffffff, rgba(255, 255, 255, 0) 20%, rgba(255, 255, 255, 0));
+  border-image-slice: 1;
+  background: white;
+  margin-top: 25px;
+}
